# godot-haskell-starter

./: .gitignore  LICENSE  Makefile  README.md  godot-haskell-starter.cabal  godot-haskell.cabal  godot-haskell.nix  shell.nix  stack-shell.nix
ffi/cbits/: flib.c
game/: Main.gdns  project.godot
game/lib/: libgodot-haskell-starter.gdnlib  libgodot-haskell.gdnlib
