cabal-version: 1.12

name:           godot-haskell
version:        0.0.0.0
description:    Please see the README on Github at <https://github.com//godot-haskell#readme>
homepage:       https://github.com//godot-haskell#readme
bug-reports:    https://github.com//godot-haskell/issues
author:         
maintainer:     
copyright:      
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com//godot-haskell

library
  exposed-modules: Lib
  hs-source-dirs: src
  ghc-options:
    -Wall
    -fwarn-unused-do-bind
    -fwarn-tabs
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -O2
  build-depends:
      base >=4.12 && <5
    , godot-haskell
    , linear
    , stm
    , text
    , vector
  default-language: Haskell2010

foreign-library godot-haskell
  type: native-shared
  other-modules: FLib
  hs-source-dirs: ffi/flib
  c-sources: ffi/cbits/flib.c
  build-depends:
      base >= 4.12 && <5
    , godot-haskell
    , godot-haskell
  default-language: Haskell2010


